--- a/main.css
+++ b/main.css
@@ -131,5 +131,31 @@ font-size: 25px;
 .section-eat {
     display: flex;
     grid-template-columns: repeat(4, 1fr);
+}
+ 
+@media screen { 
+    .post-card-container {
+        grid-template-columns: repeat(1fr);
+        padding: 0 15px;
+    }
     
+    .post-card-container .section-title {
+        grid-column: span 2;
+    }
+
+} 
+.buttoms-section {
+    display: flex;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    margin: 10px auto;
+}
+
+.buttoms-section .student-name {
+    padding: 5px 19px;
+    font-family: "Bebas";
+    color: aliceblue;
+    background-color: #8a2be2;
+    border-radius: 5px;
 }
