--- a/main.css
+++ b/main.css
@@ -520,7 +520,7 @@ font-face {
   
   .ivana-footer{ 
     background-color: rgba(0, 0, 0, 0.5);
-    background-image: url('images/Background\ Iv\ foooter.jpg');
+    background-image: url('images/Background\ footer\ new.jpg');
     background-size: cover; 
     background-position: contain;
     margin: 0;
